--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,7 @@
 ---
-title: "kathy-quarto-website"
+title: "Kathryn Sadowski"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+This is a Quarto website made by Kathryn Sadowski.
 
 
