--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,6 @@
 title: "Kathryn Sadowski"
 ---
 
-This is a Quarto website made by Kathryn Sadowski.
+This is a Quarto website made by Kathryn Sadowski.This is the best website ever!
 
 
